// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<popconfirm> demo: > render [async] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Click To Show
</button>
`;

exports[`<popconfirm> demo: > render [basic] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Click To Delete
</button>
`;

exports[`<popconfirm> demo: > render [custom] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Discard
</button>
`;

exports[`<popconfirm> demo: > render [position] correctly 1`] = `
<div data-v-d7b39c98="" style="position: relative; width: 440px; height: 280px;"><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 0px; left: 70px;">
    <!--v-if-->TL
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 0px; left: 180px;">
    <!--v-if-->TOP
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 0px; left: 290px;">
    <!--v-if-->TR
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 240px; left: 70px;">
    <!--v-if-->BL
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 240px; left: 180px;">
    <!--v-if-->BOTTOM
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 240px; left: 290px;">
    <!--v-if-->BR
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 60px; left: 10px;">
    <!--v-if-->LT
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 120px; left: 10px;">
    <!--v-if-->LEFT
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 180px; left: 10px;">
    <!--v-if-->LB
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 60px; left: 350px;">
    <!--v-if-->RT
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 120px; left: 350px;">
    <!--v-if-->RIGHT
  </button>
  <!----><button data-v-d7b39c98="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 180px; left: 350px;">
    <!--v-if-->RB
  </button>
  <!---->
</div>
`;

exports[`<popconfirm> demo: > render [type] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Click To Delete
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Click To Delete
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Click To Delete
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Click To Delete
    </button>
    <!---->
  </div>
</div>
`;
